fix: revert overflow-x to hidden on body to fix hamburger on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,7 @@
 
   body {
     @apply bg-black text-zinc-50 font-sans;
-    overflow-x: clip;
+    overflow-x: hidden;
   }
 
   input, textarea, select {
